// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Radio /> snapshot 1`] = `
<div>
  <label
    class="label justify-start gap-3 cursor-pointer"
    for="test"
  >
    <input
      class="radio radio-size-md"
      data-testid="test"
      id="test"
      name="test"
      type="radio"
    />
  </label>
</div>
`;

exports[`<Radio /> snapshot full props 1`] = `
<div>
  <label
    class="label justify-start gap-3 cursor-not-allowed"
    for="test"
  >
    <span
      class="label-text"
    >
      Label
    </span>
    <input
      checked=""
      class="radio radio-color-primary radio-size-lg"
      data-testid="test"
      disabled=""
      id="test"
      name="test"
      type="radio"
    />
    <p
      class="text-red-500"
    >
      Error test
    </p>
  </label>
</div>
`;
